[package]
name = "double_pendulum"
version = "0.1.0"
authors = ["kugiyasan <kugiyasan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.8.3"

# RUSTFLAGS="-C target-cpu=native" cargo run --release
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
# put debug = true to improve flamegraph information

# flamegraph -o optimization/framegraph.svg target/release/double_pendulum
